# basenji

./: .gitignore  LICENSE  README.md  analysis.py  environment.yml  main.py  params_react.json  prespecified.yml  prespecified_pip.txt  pyproject.toml  requirements.txt  setup.py  test_basenji.py
basenji/: __init__.py  accuracy.py  augmentation.py  autoencoder.py  batcher.py  bed.py  blocks.py  dataset.py  dna_io.py  emerald.py  gene.py  genedata.py  genes.py  genome.py  gff.py  hyper.py  io.py  layers.py  metrics.py  ops.py  params.py  plots.py  rnann.py  rnn.py  sad5.py  seqnn.py  seqnn_orig.py  seqnn_util.py  shared_flags.py  stream.py  tfrecord_batcher.py  tfrecord_util.py  trainer.py  util.py  vcf.py  visualization.py
basenji.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
basenji/archive/: accuracy.py  ops.py  params.py  tfrecord_batcher.py
data/: .gitignore  human.hg38.genome  mouse.mm10.genome
docs/: accuracy.md  generic_params.json  preprocess.md  regulatory.md  train.md  variants.md
jupyter/: basenji_sad_viz.ipynb  basenji_sat_vcf_viz.ipynb  saluki_data.ipynb
manuscript/: README.md  get_data.sh  get_model.sh  params.txt
manuscripts/akita/: .gitignore  README.md  explore_model.ipynb  get_data.sh  (+5 more)
test/: hdf5_bed.py
testdata/: BUILD  params.dilated_res.262k.txt  params.small.131k.tfrecord.txt  params.small.hd5.txt  params.small.tfrecord.txt
tests/: .gitignore  hdf5_bed.py  test_augment.py  test_data.py  test_data2.py  test_dna_io.py  test_gene.py  test_sad.py  test_sad_debug.ipynb  test_sat.py  test_sed.py  test_test.py  test_train.py  test_train_full.py
tutorials/: .gitignore  genes.ipynb  preprocess.ipynb  sad.ipynb  sat_mut.ipynb  train_test.ipynb
(+92 files in other folders)
