[project]
name = "basenji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "absl-py==1.0.0",
    "asciitree==0.3.3",
    "astropy>=5.2.2",
    "astunparse==1.6.3",
    "bioframe==0.3.3",
    "cachetools==5.1.0",
    "cooler==0.8.11",
    "cooltools==0.5.1",
    "cython>=3.0.12",
    "cytoolz==0.10.1",
    "dill==0.3.5.1",
    "flatbuffers==2.0",
    "gast==0.5.3",
    "google-auth==2.6.6",
    "google-auth-oauthlib==0.4.6",
    "google-pasta==0.2.0",
    "grpcio==1.46.1",
    "h5py>=3.11.0",
    "intervaltree>=3.1.0",
    "joblib>=1.4.2",
    "keras==2.8.0",
    "keras-preprocessing==1.1.2",
    "libclang==14.0.1",
    "markdown==3.3.7",
    "matplotlib>=3.7.5",
    "multiprocess==0.70.13",
    "natsort>=8.4.0",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "oauthlib==3.2.0",
    "opt-einsum==3.3.0",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "protobuf==3.20.1",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pybedtools>=0.12.0",
    "pybigwig>=0.3.22",
    "pyfaidx==0.7.0",
    "pypairix==0.3.7",
    "pysam>=0.23.0",
    "qnorm>=0.8.1",
    "requests-oauthlib==1.3.1",
    "rsa==4.8",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "simplejson==3.17.6",
    "statsmodels>=0.14.1",
    "tabulate>=0.9.0",
    "tensorboard==2.8.0",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-wit==1.8.1",
    "tensorflow==2.8.0",
    "tensorflow-io-gcs-filesystem==0.25.0",
    "termcolor==1.1.0",
    "tf-estimator-nightly==2.8.0.dev2021122109",
]
